typesafe-builders/tests/ui/reject/tuple_struct.rs
use typesafe_builders::prelude::*;

#[derive(Builder)]
pub struct Struct(pub u8);

fn main() {
}
